# py-dynwrap

./: .gitignore  AUDIT.md  DISCOVERY.md  LICENSE  MATH.md  README.md  RECONSTRUCTION_REPORT.md  pyproject.toml
.github/workflows/: publish.yml
data/: candidate.json  manifest.yaml  reference.json
examples/: compare_R_vs_Python.ipynb  evolution.ipynb  function_by_function_R_parity.ipynb  tutorial_basic.ipynb
pydynwrap/: __init__.py  convert.py  geodesic.py  predicates.py  topology.py  trajectory.py
tests/: _run_candidate.py  r_reference_driver.R  test_exact_match.py  test_smoke.py
